feat: downgrade to target Java 8  (#61)